--- a/app/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/app/blocks/panelAutobusy/_panelAutobusy.sass
@@ -130,6 +130,7 @@
     tr
       min-height: 30px
       text-align: center
+      border-bottom: 1px solid white
     th
       background-color: #2196F3
       color: white
@@ -144,7 +145,7 @@
       margin: 3px 5px
       cursor: pointer
       i
-        font-size: 1.2em
+        font-size: 1.4em
         color: #444
         cursor: pointer
       &:hover
