--- a/app/blocks/panelPrzystanki/_panelPrzystanki.sass
+++ b/app/blocks/panelPrzystanki/_panelPrzystanki.sass
@@ -119,6 +119,7 @@
     tr
       min-height: 30px
       text-align: center
+      border-bottom: 1px solid white
     th
       background-color: #2196F3
       color: white
@@ -132,8 +133,9 @@
     .navigation
       margin: 3px 5px
       cursor: pointer
+      display: inline-block
       i
-        font-size: 1.2em
+        font-size: 1.4em
         color: #444
         cursor: pointer
       &:hover
