--- a/app/blocks/panelTrasy/_panelTrasy.sass
+++ b/app/blocks/panelTrasy/_panelTrasy.sass
@@ -3,13 +3,14 @@
   display: flex
   flex-wrap: wrap
   justify-content: flex-start
+  &__itemHolder
+    width: 25%
+    padding: 4px
+    min-height: 100px
   &__item
+    min-height: 100px
     border-radius: 7px
     border: none
-    width: 23%
-    min-height: 100px
-    margin: 3px
-    padding: 5px
     background-color: #3c8dbc
     text-align: center
     align-self: center
