--- a/app/jade/panelPrzystanki.jade
+++ b/app/jade/panelPrzystanki.jade
@@ -19,7 +19,7 @@
       .panelPrzystanki__filtr
         label Ulica
         input(placeholder="Ulica..." ng-model="przystanekFilter.LocalizationString")
-      .panelAutobusy__filtr
+      .panelPrzystanki__filtr
         label Typ przystanku
         select(ng-model="przystanekFilter.BusStopType")
           option(value="") Typ
