--- a/app/blocks/main.sass
+++ b/app/blocks/main.sass
@@ -58,3 +58,4 @@ $ionicons-font-path: "../bower_components/Ionicons/fonts"
 @import "panelWyswietlPrzystanek/panelWyswietlPrzystanek"
 @import "panelWyswietlUser/panelWyswietlUser"
 @import "panelTrasy/panelTrasy"
+@import "panelDodajTrase/panelDodajTrase"
