--- a/app/blocks/panelTrasy/_panelTrasy.sass
+++ b/app/blocks/panelTrasy/_panelTrasy.sass
@@ -4,11 +4,10 @@
   flex-wrap: wrap
   justify-content: flex-start
   &__itemHolder
-    width: 25%
     padding: 4px
-    min-height: 100px
   &__item
-    min-height: 100px
+    height: 50px
+    width: 50px
     border-radius: 7px
     border: none
     background-color: #3c8dbc
