--- a/app/blocks/panelDodajTrase/_panelDodajTrase.sass
+++ b/app/blocks/panelDodajTrase/_panelDodajTrase.sass
@@ -48,3 +48,8 @@
     cursor: pointer
     &:hover
       background: #008d4c
+  &__alert
+    text-align: center
+    padding: 5px 20px 20px
+    font-weight: 400
+    color: #00b3ee
