--- a/app/css/main.css
+++ b/app/css/main.css
@@ -14053,3 +14053,10 @@ a.tabnav-extra:hover {
 .panelDodajTrase__buttonToSave:hover {
   background: #008d4c;
 }
+
+.panelDodajTrase__alert {
+  text-align: center;
+  padding: 5px 20px 20px;
+  font-weight: 400;
+  color: #00b3ee;
+}
