--- a/app/blocks/panelTrasy/_panelTrasy.sass
+++ b/app/blocks/panelTrasy/_panelTrasy.sass
@@ -24,3 +24,8 @@
       background-color: #367ba5
   &__number
     margin: 0 auto
+  &__alert
+    text-align: center
+    padding: 5px 20px 20px
+    font-weight: 400
+    color: #00b3ee
