--- a/app/css/main.css
+++ b/app/css/main.css
@@ -13979,6 +13979,13 @@ a.tabnav-extra:hover {
   margin: 0 auto;
 }
 
+.panelTrasy__alert {
+  text-align: center;
+  padding: 5px 20px 20px;
+  font-weight: 400;
+  color: #00b3ee;
+}
+
 .panelDodajTrase__columns {
   display: -webkit-flex;
   display: -ms-flexbox;
