--- a/app/jade/panelTrasy.jade
+++ b/app/jade/panelTrasy.jade
@@ -21,7 +21,7 @@
         .panelTrasy__itemHolder(ng-repeat="trasa in tracks | filter:trasaFilter | filter:{ StatusValue: '1'} as filtrowanetrasy")
           a(href="/#/Track/Get/{{ trasa.Id }}").panelTrasy__item
            .panelTrasy__number {{trasa.Id}}
-      .-alert(ng-hide="filtrowanetrasy.length") Brak wpisów, proszę zmienić kryteria wyszukiwania.
+      .panelTrasy__alert(ng-hide="filtrowanetrasy.length") Brak wpisów, proszę zmienić kryteria wyszukiwania.
 
     .panelAutobusy__subtitle Nieaktywne trasy
     .panelAutobusy__table
@@ -29,5 +29,5 @@
         .panelTrasy__itemHolder(ng-repeat="trasa in tracks | filter:trasaFilter | filter:{ StatusValue: '0'} as filtrowanetrasy")
           a(href="/#/Track/Get/{{ trasa.Id }}").panelTrasy__item
             .panelTrasy__number {{trasa.Id}}
-      .-alert(ng-hide="filtrowanetrasy.length") Brak wpisów, proszę zmienić kryteria wyszukiwania.
+      .panelTrasy__alert(ng-hide="filtrowanetrasy.length") Brak wpisów, proszę zmienić kryteria wyszukiwania!
 
