--- a/app/blocks/main.sass
+++ b/app/blocks/main.sass
@@ -59,3 +59,4 @@ $ionicons-font-path: "../bower_components/Ionicons/fonts"
 @import "panelWyswietlUser/panelWyswietlUser"
 @import "panelTrasy/panelTrasy"
 @import "panelDodajTrase/panelDodajTrase"
+@import "panelWyswietlTrase/panelWyswietlTrase"
