--- a/app/jade/panelWyswietlPrzystanek.jade
+++ b/app/jade/panelWyswietlPrzystanek.jade
@@ -73,8 +73,8 @@
               option(value=1) Tak
       .panelWyswietlPrzystanek__navigation(ng-hide="sendForm")
         button(ng-click="updateBusstop()").green.panelWyswietlPrzystanek__navigation__item.green Aktualizuj
-        a(href="/#/busstop/delete/{{ PrzystanekID }}" ng-hide="item.BusStopStatus == 0").panelWyswietlPrzystanek__navigation__item.red Dezaktywuj
-        a(href="/#/busstop/restore/{{ PrzystanekID }}" ng-show="item.BusStopStatus == 0").panelWyswietlPrzystanek__navigation__item.greenDark Aktywuj
+        a(href="/#/busstop/delete/{{ PrzystanekID }}" ng-hide="autobus.BusStopStatus == 0").panelWyswietlPrzystanek__navigation__item.red Dezaktywuj
+        a(href="/#/busstop/restore/{{ PrzystanekID }}" ng-show="autobus.BusStopStatus == 0").panelWyswietlPrzystanek__navigation__item.greenDark Aktywuj
         a(href="/#/busstop").panelWyswietlPrzystanek__navigation__item.gray.-abort Anuluj
       .panelDodajAutobus__dataLoader(ng-show="sendForm")
         .panelDodajAutobus__dataLoader__svg(ng-hide="CallbackServera")
