--- a/app/css/main.css
+++ b/app/css/main.css
@@ -14067,3 +14067,44 @@ a.tabnav-extra:hover {
   font-weight: 400;
   color: #00b3ee;
 }
+
+.panelWyswietlTrase__columns {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media (max-width: 1024px) {
+  .panelWyswietlTrase__columns {
+    display: block;
+  }
+}
+
+.panelWyswietlTrase__column {
+  width: 50%;
+  padding: 5px;
+}
+
+@media (max-width: 1024px) {
+  .panelWyswietlTrase__column {
+    width: 100%;
+  }
+}
+
+.panelWyswietlTrase__title {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.panelWyswietlTrase__alert {
+  font-size: 16px;
+  font-weight: 700;
+  color: darkred;
+  padding: 15px 5px;
+}
