--- a/app/jade/panelTrasy.jade
+++ b/app/jade/panelTrasy.jade
@@ -19,7 +19,7 @@
     .panelAutobusy__table(ng-controller="TrackController")
       .panelTrasy
         .panelTrasy__itemHolder(ng-repeat="trasa in tracks | filter:trasaFilter | filter:{ StatusValue: '1'} as filtrowanetrasy")
-          a(href="/#/Track/Get/{{ trasa.Id }}").panelTrasy__item
+          a(href="/#/track/show/{{ trasa.Id }}").panelTrasy__item
            .panelTrasy__number {{trasa.Id}}
       .panelTrasy__alert(ng-hide="filtrowanetrasy.length") Brak wpisów, proszę zmienić kryteria wyszukiwania.
 
@@ -27,7 +27,7 @@
     .panelAutobusy__table
       .panelTrasy
         .panelTrasy__itemHolder(ng-repeat="trasa in tracks | filter:trasaFilter | filter:{ StatusValue: '0'} as filtrowanetrasy")
-          a(href="/#/Track/Get/{{ trasa.Id }}").panelTrasy__item
+          a(href="/#/track/show/{{ trasa.Id }}").panelTrasy__item
             .panelTrasy__number {{trasa.Id}}
       .panelTrasy__alert(ng-hide="filtrowanetrasy.length") Brak wpisów, proszę zmienić kryteria wyszukiwania!
 
