--- a/app/jade/panelWyswietlAutobus.jade
+++ b/app/jade/panelWyswietlAutobus.jade
@@ -58,8 +58,8 @@
               option(value=1) Tak
       .panelWyswietlAutobus__navigation(ng-hide="sendForm")
         button(ng-click="updateBus()").green.panelWyswietlAutobus__navigation__item.green Aktualizuj
-        a(href="/#/bus/delete/{{ AutobusID }}" ng-hide="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.red Dezaktywuj
-        a(href="/#/bus/restore/{{ AutobusID }}" ng-show="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.greenDark Aktywuj
+        a(href="/#/bus/delete/{{ AutobusID }}" ng-hide="autobus.BusStatus == 0").panelWyswietlAutobus__navigation__item.red Dezaktywuj
+        a(href="/#/bus/restore/{{ AutobusID }}" ng-show="autobus.BusStatus == 0").panelWyswietlAutobus__navigation__item.greenDark Aktywuj
         a(href="/#/bus").panelWyswietlAutobus__navigation__item.gray.-abort Anuluj
 
       .panelDodajAutobus__dataLoader(ng-show="sendForm")
