--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -44,8 +44,21 @@ html(lang="pl" ng-app="app")
                     td Kiosk
                     td {{selectedBusstop.GotKioskName}}
 
+
+
+            directions(
+              draggable="true"
+              travel-mode="DRIVING"
+              waypoints="{{wayPoints}}"
+              origin="{{origin}}"
+              destination="{{destination}}"
+              suppress-markers="true"
+
+              )
+
             //Markery przystanków
-            marker(ng-repeat="b in busstopMarker" position="{{b.Position}}" id="{{b.Id}}" on-click="showBusstop(event, b)" animation="DROP" icon="blocks/googleMaps/src/busstopMarker.png")
+            marker(ng-repeat="b in busstopMarker" position="{{b.Position}}" id="{{b.Id}}" on-click="showBusstop(event, b)" icon="{{markerIcon}}")
+
 
 
 
