Panel tras + delete

--- a/app/blocks/panelLogin/_panelLogin.sass
+++ b/app/blocks/panelLogin/_panelLogin.sass
@@ -196,3 +196,9 @@
       font-size: 1.8em !important
   &__icon
     font-size: 3em
+  &__Loginalert
+    color: red
+    text-align: center
+    display: block
+    font-weight: 700
+    padding: 5px
