--- a/app/blocks/panelWyswietlTrase/_panelWyswietlTrase.sass
+++ b/app/blocks/panelWyswietlTrase/_panelWyswietlTrase.sass
@@ -19,3 +19,18 @@
     font-weight: 700
     color: darkred
     padding: 15px 5px
+
+  &__itemBox
+    padding: 5px
+  &__item
+    background-color: #2196F3
+    border-radius: 4px
+    padding: 5px 8px
+  &__itemTitle
+    color: white
+    font-size: 17px
+    font-weight: 700
+    cursor: default
+  &__itemSubtitle
+    color: whitesmoke
+    cursor: default
