--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -48,7 +48,7 @@ html(lang="pl" ng-app="app")
 
             directions(
               id="d1"
-              draggable="true"
+              draggable="false"
               travel-mode="DRIVING"
               waypoints="{{wayPoints}}"
               origin="{{origin}}"
