--- a/app/jade/panelLogin.jade
+++ b/app/jade/panelLogin.jade
@@ -30,6 +30,7 @@
           span.icon
           |  Zapamiętaj mnie
       button(type="submit") Zaloguj się
+      .panelLogin__Loginalert(ng-show="KomunikatVal") {{ Komunikat }}
       .panelLogin__navigation Nie masz konta?
         a(href="/#/register").panelLogin__ToRegister Zarejestruj się.
       .panelLogin__navigation Nie pamietasz hasła?
