--- a/app/blocks/panelWyswietlAutobus/_panelWyswietlAutobus.sass
+++ b/app/blocks/panelWyswietlAutobus/_panelWyswietlAutobus.sass
@@ -105,6 +105,7 @@
       color: white
       border: none
       padding: 10px 10px
+      cursor: pointer
       //border-radius: 5px
       max-width: 150px
       width: 100%
