--- a/app/css/main.css
+++ b/app/css/main.css
@@ -22,7 +22,7 @@
 
 .fa {
   display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
+  font: normal normal normal 14px / 1 FontAwesome;
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -3947,11 +3947,11 @@ input,
 select,
 textarea,
 button {
-  font: 13px/1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font: 13px / 1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 body {
-  font: 13px/1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font: 13px / 1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #333;
   background-color: #fff;
 }
@@ -4661,7 +4661,7 @@ input::-webkit-inner-spin-button {
 }
 
 .status-indicator {
-  font: normal normal 16px/1 "octicons";
+  font: normal normal 16px / 1 "octicons";
   display: inline-block;
   text-decoration: none;
   -webkit-font-smoothing: antialiased;
@@ -10474,6 +10474,14 @@ a.tabnav-extra:hover {
   font-size: 3em;
 }
 
+.panelLogin__Loginalert {
+  color: red;
+  text-align: center;
+  display: block;
+  font-weight: 700;
+  padding: 5px;
+}
+
 .panelRegister {
   min-width: 560px;
 }
@@ -13225,6 +13233,7 @@ a.tabnav-extra:hover {
   color: white;
   border: none;
   padding: 10px 10px;
+  cursor: pointer;
   max-width: 150px;
   width: 100%;
   margin-right: 5px;
@@ -14107,4 +14116,26 @@ a.tabnav-extra:hover {
   font-weight: 700;
   color: darkred;
   padding: 15px 5px;
+}
+
+.panelWyswietlTrase__itemBox {
+  padding: 5px;
+}
+
+.panelWyswietlTrase__item {
+  background-color: #2196F3;
+  border-radius: 4px;
+  padding: 5px 8px;
+}
+
+.panelWyswietlTrase__itemTitle {
+  color: white;
+  font-size: 17px;
+  font-weight: 700;
+  cursor: default;
+}
+
+.panelWyswietlTrase__itemSubtitle {
+  color: whitesmoke;
+  cursor: default;
 }
