--- a/app/blocks/panelWelcome/_panelWelcome.sass
+++ b/app/blocks/panelWelcome/_panelWelcome.sass
@@ -127,3 +127,11 @@
         background: #4F98C2
         &:hover
           background: #367fa9
+  &__holder
+    background-color: hsla(0, 0%, 0%, 0.5)
+    position: absolute
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+    z-index: 100
