--- a/app/css/main.css
+++ b/app/css/main.css
@@ -10209,6 +10209,16 @@ a.tabnav-extra:hover {
   background: #367fa9;
 }
 
+.panelWelcome__holder {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
+
 .panelLogin {
   min-width: 560px;
 }
