--- a/app/jade/_header.jade
+++ b/app/jade/_header.jade
@@ -1,7 +1,7 @@
 //
    Created by salimike on 18.03.16.
 .header(ng-hide="globals.HeaderToHide")
-  .header__corner
+  .header__corner(ng-click="initMapTimeout()")
     i.fa.fa-bus
   .header__switcher.-hidden
     .background
