--- a/app/jade/panelWyswietlAutobus.jade
+++ b/app/jade/panelWyswietlAutobus.jade
@@ -57,6 +57,9 @@
               option(value=0) Nie
               option(value=1) Tak
       .panelWyswietlAutobus__navigation(ng-hide="sendForm")
+        span(ng-click="SubskrypcjaAutobusu(AutobusID)" ng-hide="autobus.BusStatus == 0").panelWyswietlAutobus__navigation__item.greenDark Obserwuj
+        span(ng-click="UnSubskrypcjaAutobusu(AutobusID)" ng-hide="autobus.BusStatus == 0").panelWyswietlAutobus__navigation__item.red Nie obserwuj
+      .panelWyswietlAutobus__navigation(ng-hide="sendForm")
         button(ng-click="updateBus()").green.panelWyswietlAutobus__navigation__item.green Aktualizuj
         a(href="/#/bus/delete/{{ AutobusID }}" ng-hide="autobus.BusStatus == 0").panelWyswietlAutobus__navigation__item.red Dezaktywuj
         a(href="/#/bus/restore/{{ AutobusID }}" ng-show="autobus.BusStatus == 0").panelWyswietlAutobus__navigation__item.greenDark Aktywuj
