Przygotowanie do zmiany na socketIO

--- a/app/blocks/panels/_panels.sass
+++ b/app/blocks/panels/_panels.sass
@@ -20,7 +20,7 @@
     animation: MoveLeftLink ease 1s infinite
     z-index: 2
     +PHONE_ONLY
-      top: 40px
+      //top: 40px
       a
         i
           color: #777 !important
