--- a/app/blocks/header/_header.sass
+++ b/app/blocks/header/_header.sass
@@ -128,6 +128,7 @@
     box-shadow: 0 2px 5px rgba(0,0,0,0.26)
     +PHONE_ONLY
       right: 0
+      left: inherit
       top: 0
       width: 40px
       height: 40px
