--- a/app/jade/_head.jade
+++ b/app/jade/_head.jade
@@ -18,7 +18,7 @@ head
     script(src='scripts/vendor.min.js')
     //script(src='bower_components/javascript-detect-element-resize/detect-element-resize.js')
     script(src='http://maps.google.com/maps/api/js')
-    script(src='https://jquery-xml2json-plugin.googlecode.com/svn/trunk/jquery.xml2json.js')
+    //script(src='https://jquery-xml2json-plugin.googlecode.com/svn/trunk/jquery.xml2json.js')
     //script(src="bower_components/angular/angular.min.js")
     script(src="bower_components/angular-cookies/angular-cookies.min.js")
     script(src="bower_components/angular-route/angular-route.min.js")
