--- a/app/blocks/panelWyswietlTrase/_panelWyswietlTrase.sass
+++ b/app/blocks/panelWyswietlTrase/_panelWyswietlTrase.sass
@@ -11,6 +11,9 @@
     +TAB_MAX
       width: 100%
 
+    &.-width100
+      width: 100%
+
   &__title
     font-size: 16px
     font-weight: 700
@@ -22,15 +25,20 @@
 
   &__itemBox
     padding: 5px
+    display: block
+    cursor: pointer
   &__item
     background-color: #2196F3
     border-radius: 4px
     padding: 5px 8px
+    cursor: pointer
+    &:hover
+      background-color: #1d7ccc
   &__itemTitle
     color: white
     font-size: 17px
     font-weight: 700
-    cursor: default
+    cursor: pointer
   &__itemSubtitle
     color: whitesmoke
-    cursor: default
+    cursor: pointer
