Reloadery na websocket event

--- a/app/jade/panelWyswietlKurs.jade
+++ b/app/jade/panelWyswietlKurs.jade
@@ -31,8 +31,8 @@
                 .panelWyswietlTrase__itemTitle Numer Autobusu: {{ aktywnosc.Bus.BusNumber }}
       .panelWyswietlAutobus__navigation(ng-hide="sendForm")
         section(ng-hide="course.Ended")
-          span(ng-click="SubskrypcjaAutobusu(AutobusID)" ng-hide="SubskrypcjaKlik").panelWyswietlAutobus__navigation__item.greenDark Rozpocznij Obserwacje
-          span(ng-click="UnSubskrypcjaAutobusu(AutobusID)" ng-show="SubskrypcjaKlik").panelWyswietlAutobus__navigation__item.red Zakoncz Obserwacje
+          //span(ng-click="SubskrypcjaAutobusu(AutobusID)" ng-hide="SubskrypcjaKlik").panelWyswietlAutobus__navigation__item.greenDark Rozpocznij Obserwacje
+          //span(ng-click="UnSubskrypcjaAutobusu(AutobusID)" ng-show="SubskrypcjaKlik").panelWyswietlAutobus__navigation__item.red Zakoncz Obserwacje
       .panelWyswietlAutobus__navigation
         a(href="/#/track/show/{{ TrackID }}").panelWyswietlAutobus__navigation__item.gray.-abort Wróć
       .panelWyswietlTrase__alert(ng-show="komunikat") {{ komunikat }}
