--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -70,14 +70,14 @@ html(lang="pl" ng-app="app")
                 suppress-markers="true"
                 )
               //Markery aktywnosci
-              marker(ng-repeat="bc in markerBusstopCheck" position="{{bc.Position}}" id="{{bc.Id}}" on-click="showActivity(event, bc)" icon="{{markerIcon}}")
-              marker(ng-repeat="e in markerEnd" position="{{e.Position}}" id="{{e.Id}}" on-click="showActivity(event, e)" icon="{{markerIcon}}")
-              marker(ng-repeat="i in markerIncydent" position="{{i.Position}}" id="{{i.Id}}" on-click="showActivity(event, i)" icon="{{markerIcon}}")
-              marker(ng-repeat="k in markerKanar" position="{{k.Position}}" id="{{k.Id}}" on-click="showActivity(event, k)" icon="{{markerIcon}}")
-              marker(ng-repeat="st in markerSellTicket" position="{{st.Position}}" id="{{st.Id}}" on-click="showActivity(event, st)" icon="{{markerIcon}}")
-              marker(ng-repeat="s in markerStart" position="{{s.Position}}" id="{{s.Id}}" on-click="showActivity(event, s)" icon="{{markerIcon}}")
-              marker(ng-repeat="t in markerTechnicla" position="{{t.Position}}" id="{{t.Id}}" on-click="showActivity(event, t)" icon="{{markerIcon}}")
-              marker(ng-repeat="tic in markerTicket" position="{{tic.Position}}" id="{{tic.Id}}" on-click="showActivity(event, tic)" icon="{{markerIcon}}")
+              marker(ng-repeat="bc in markerBusstopCheck" position="{{bc.Position}}" id="{{bc.Id}}" on-click="showActivity(event, bc)" icon="../blocks/googleMaps/src/markerBusstopCheck.png")
+              marker(ng-repeat="e in markerEnd" position="{{e.Position}}" id="{{e.Id}}" on-click="showActivity(event, e)" icon="../blocks/googleMaps/src/markerEnd.png")
+              marker(ng-repeat="i in markerIncydent" position="{{i.Position}}" id="{{i.Id}}" on-click="showActivity(event, i)" icon="../blocks/googleMaps/src/markerIncydent.png")
+              marker(ng-repeat="k in markerKanar" position="{{k.Position}}" id="{{k.Id}}" on-click="showActivity(event, k)" icon="../blocks/googleMaps/src/markerKanar.png")
+              marker(ng-repeat="st in markerSellTicket" position="{{st.Position}}" id="{{st.Id}}" on-click="showActivity(event, st)" icon="../blocks/googleMaps/src/markerSellTicket.png")
+              marker(ng-repeat="s in markerStart" position="{{s.Position}}" id="{{s.Id}}" on-click="showActivity(event, s)" icon="../blocks/googleMaps/src/markerStart.png")
+              marker(ng-repeat="t in markerTechnicla" position="{{t.Position}}" id="{{t.Id}}" on-click="showActivity(event, t)" icon="../blocks/googleMaps/src/markerTechnicla.png")
+              marker(ng-repeat="tic in markerTicket" position="{{tic.Position}}" id="{{tic.Id}}" on-click="showActivity(event, tic)" icon="../blocks/googleMaps/src/markerTicket.png")
 
 
 
@@ -85,7 +85,8 @@ html(lang="pl" ng-app="app")
                 .googleMaps__API__infoWindow(ng-non-bindable)
                   h4 {{selectedActivity.Name}}
 
-
+              //Markery autobusów
+              marker(ng-repeat="bus in busMarker" position="{{bus.Position}}" id="{{bus.Id}}" on-click="showActivity(event, bus)" icon="../blocks/googleMaps/src/busMarker.png")
 
 
 
